Tests/Error/Multilingual/.build/catchjapanese.pr
{
  "name": "CatchJapanese",
  "description": "Sets %caughtJapanese% to true (null comparison marker ignored as it is not a valid action modifier).",
  "comment": null,
  "steps": [
    {
      "index": 0,
      "text": "set %caughtJapanese% = true",
      "lineNumber": 2,
      "indent": 0,
      "comment": null,
      "actions": [
        {
          "module": "variable",
          "action": "set",
          "parameters": [
            {
              "name": "Name",
              "value": "%caughtJapanese%",
              "type": "string"
            },
            {
              "name": "Value",
              "value": true,
              "type": "bool"
            }
          ],
          "defaults": null,
          "modifiers": []
        }
      ],
      "intent": null,
      "waitForExecution": true
    }
  ],
  "goals": [],
  "visibility": 1,
  "path": "/Error/Multilingual/CatchJapanese.goal",
  "prPath": "/Error/Multilingual/.build/catchjapanese.pr",
  "hash": "60c802606c976f152d5f57bca81d0e5a510c3c76a762e5b2835c240434bcdc3c",
  "builderVersion": null,
  "isSetup": false,
  "isEvent": false,
  "isSystem": false,
  "isTest": false,
  "inputParameters": null
}